fetch data from storage instead of making an API every time